finished main site

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,10 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <title>RudRecciah - Contact</title>
+  <meta charset="utf-8">
+  <meta content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport">
+  <meta name="author" content="RudRecciah">
+  <meta name="description" content="I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, and Python. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic GAMER spending his days playing competitive Minecraft and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the plugin family Core.">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="../resources/css/material.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.1/css/OverlayScrollbars.min.css" integrity="sha512-jN4O0AUkRmE6Jwc8la2I5iBmS+tCDcfUd1eq8nrZIBnDKTmCp5YxxNN1/aetnAH32qT+dDbk1aGhhoaw5cJNlw==" crossorigin="anonymous" />
+  <link href="../resources/css/style.css" rel="stylesheet">
+  <link rel="icon" href="../favicon.png">
 </head>
-<body>
-
+<body class="ch-100">
+<nav class="navbar navbar-dark bg-info shadow-4 z-index-20">
+  <a class="navbar-brand m-0" href="../">
+    <img src="../resources/img/parrot.png" width="36" height="36" alt="Party Parrot">
+    <span class="d-none d-lg-inline">
+        <span class="font-custom-bold cml-15">&#60;/RudRecciah&#62;</span>
+      </span>
+  </a>
+  <ul class="navbar-nav d-lg-none align-self-center">
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../"><span class="font-custom-bold">&#60;/RudRecciah&#62;</span></a>
+    </li>
+  </ul>
+  <div class="d-lg-none">
+    <button aria-controls="sidebar" aria-expanded="false" aria-label="Toggle Navdrawer" class="navbar-toggler" data-target="#sidebar" data-toggle="navdrawer"><span class="navbar-toggler-icon"></span></button>
+  </div>
+  <ul class="navbar-nav d-none d-lg-flex">
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../about" data-toggle="tooltip" data-placement="bottom" title="About"><i class="material-icons">person</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="./" data-toggle="tooltip" data-placement="bottom" title="Contact"><i class="material-icons">email</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../admincore/" data-toggle="tooltip" data-placement="bottom" title="Admincore"><i class="material-icons">admin_panel_settings</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../webcore/" data-toggle="tooltip" data-placement="bottom" title="Webcore"><i class="material-icons">web</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../lobbycore/" data-toggle="tooltip" data-placement="bottom" title="Lobbycore"><i class="material-icons">storefront</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../osea/" data-toggle="tooltip" data-placement="bottom" title="Endcraft"><i class="material-icons">widgets</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../ttm/" data-toggle="tooltip" data-placement="bottom" title="TTM Theory Wiki"><i class="material-icons">library_books</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../cqs/" data-toggle="tooltip" data-placement="bottom" title="CQS"><i class="material-icons">analytics</i></a>
+    </li>
+  </ul>
+</nav>
+<div aria-hidden="true" class="navdrawer" id="sidebar" tabindex="-1">
+  <div class="navdrawer-content">
+    <div class="navdrawer-subheader">
+      Information
+    </div>
+    <ul class="navdrawer-nav">
+      <li class="nav-item">
+        <a class="nav-link active text-info" href="../"><i class="material-icons mr-3">home</i> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="./"><i class="material-icons mr-3">person</i> About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../contact"><i class="material-icons mr-3">email</i> Contact</a>
+      </li>
+    </ul>
+    <div class="navdrawer-subheader">
+      Core
+    </div>
+    <ul class="navdrawer-nav">
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../admincore"><i class="material-icons mr-3">admin_panel_settings</i> Admincore</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../webcore"><i class="material-icons mr-3">web</i> Webcore</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../lobbycore"><i class="material-icons mr-3">storefront</i> Lobbycore</a>
+      </li>
+    </ul>
+    <div class="navdrawer-subheader">
+      Miscellaneous
+    </div>
+    <ul class="navdrawer-nav">
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../osea"><i class="material-icons mr-3">widgets</i> Endcraft</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../ttm"><i class="material-icons mr-3">library_books</i> TTM Theory Wiki</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../cqs"><i class="material-icons mr-3">analytics</i> CQS</a>
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="spacer-lg d-none d-lg-block"></div>
+<div class="container-fluid h-fluid">
+  <div class="row align-items-center">
+    <div class="col-lg-2"></div>
+    <div class="col-12 col-lg-8">
+      <div class="jumbotron shadow-none shadow-lg-4">
+        <h1 class="display-4 text-center font-custom-bold">Contact</h1>
+        <p class="text-center font-custom">Looking to get in touch? To contact me, you can either send me an email, visit one of my socials, or join my Discord server. While I do respond to emails and check my social media regularly, I'm most active on Discord. Alternativley from joining said server, you can contact me by sending me a friend request on Discord <span class="font-custom-bold text-info">@RudRecciah#5681 (@246080207704817664)</span>. I may not accept that request though if your account seems to be a bot (or maybe I will, who knows how tired of bots I'll be that day) so I still highly recommend contacting me via my server. I'm most active on Github and Twitter so those are the most optimal platforms to contact me on if you choose a social media account. I'm least active on Twitch, so I highly advise against using Twitch to get in touch.</p>
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <div class="text-center">
+              <a href="mailto:me@rudrecciah.dev" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">email</i> Email</a>
+            </div>
+            <div class="spacer-md-lg"></div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="text-center">
+              <a tabindex="0" class="btn btn-info font-custom-bold" role="button" data-toggle="popover" data-trigger="focus" title="<span class='font-custom-bold text-center'>Social Media Accounts</span>" data-html="true" data-placement="top" data-content="<table class='table text-center'><tbody><tr><td><a href='https://github.com/rudrecciah' class='font-custom text-info'>Github</a></td></tr><tr><td><a href='https://steamcommunity.com/id/rudrecciah' class='font-custom text-info'>Steam</a></td></tr><tr><td><a href='https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q' class='font-custom text-info'>Youtube</a></td></tr><tr><td><a href='https://twitch.tv/rudrecciah' class='font-custom text-info'>Twitch</a></td></tr><tr><td><a href='https://twitter.com/rrecciah' class='font-custom text-info'>Twitter</a></td></tr></tbody></table>"><i class="material-icons mr-3">share</i> Socials</a>
+            </div>
+            <div class="spacer-md-lg"></div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="text-center">
+              <a href="https://discord.rudrecciah.dev/" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">podcasts</i> Discord</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-2"></div>
+  </div>
+</div>
+<div class="spacer-lg d-none d-lg-block"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="../resources/js/material.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.js"></script>
+<script src="../resources/js/main.js"></script>
 </body>
 </html>
