--- a/index.html
+++ b/index.html
@@ -103,119 +103,118 @@
       </ul>
     </div>
   </div>
-  <div class="spacer-lg d-none d-lg-block"></div>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-2"></div>
-      <div class="col-12 col-lg-8">
-        <div class="jumbotron shadow-none shadow-lg-4">
-          <h1 class="display-4 text-center font-custom-bold">Hey</h1>
-          <p class="text-center font-custom">I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, and Python. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic <span class="font-custom-bold">GAMER</span> spending his days playing competitive Minecraft, coding, and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the indev plugin family Core.</p>
-          <div class="text-center">
-            <a href="./about" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">person</i> About</a>
-          </div>
-          <hr class="my-4">
-          <h1 class="display-4 text-center font-custom-bold">Core</h1>
-          <p class="text-center font-custom">Spigot server operation, polished.</p>
-          <div class="row">
-            <div class="col-12 col-md-4">
-              <div class="card m-auto ch-100" style="max-width: 20rem;">
-                <img alt="Admincore" class="card-img-top" src="resources/img/act.png">
-                <div class="card-body">
-                  <h4 class="card-title font-custom-bold">Admincore</h4>
-                  <p class="card-text font-custom">With Admincore, you can moderate and administer your server with ease and simplicity. Report, punish, spectate, appeal, and manage your playerbase in-game quickly and without hassle.</p>
+  <div id="scroll">
+    <div class="spacer-lg d-none d-lg-block"></div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-12 col-lg-8">
+          <div class="jumbotron shadow-none shadow-lg-4">
+            <h1 class="display-4 text-center font-custom-bold">Hey</h1>
+            <p class="text-center font-custom">I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, and Python. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic <span class="font-custom-bold">GAMER</span> spending his days playing competitive Minecraft, coding, and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the indev plugin family Core.</p>
+            <div class="text-center">
+              <a href="./about" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">person</i> About</a>
+            </div>
+            <hr class="my-4">
+            <h1 class="display-4 text-center font-custom-bold">Core</h1>
+            <p class="text-center font-custom">Spigot server operation, polished.</p>
+            <div class="row">
+              <div class="col-12 col-md-4">
+                <div class="card m-auto ch-100" style="max-width: 20rem;">
+                  <img alt="Admincore" class="card-img-top" src="resources/img/act.png">
+                  <div class="card-body">
+                    <h4 class="card-title font-custom-bold">Admincore</h4>
+                    <p class="card-text font-custom">With Admincore, you can moderate and administer your server with ease and simplicity. Report, punish, spectate, appeal, and manage your playerbase in-game quickly and without hassle.</p>
+                  </div>
+                  <div class="card-actions">
+                    <a class="btn btn-outline-info font-custom-bold" href="./admincore"><i class="material-icons mr-3">admin_panel_settings</i> Learn More</a>
+                  </div>
                 </div>
-                <div class="card-actions">
-                  <a class="btn btn-outline-info font-custom-bold" href="./admincore"><i class="material-icons mr-3">admin_panel_settings</i> Learn More</a>
+                <div class="spacer-md-lg"></div>
+              </div>
+              <div class="col-12 col-md-4">
+                <div class="card m-auto ch-100" style="max-width: 20rem;">
+                  <img alt="Webcore" class="card-img-top" src="resources/img/wct.png">
+                  <div class="card-body">
+                    <h4 class="card-title font-custom-bold">Webcore</h4>
+                    <p class="card-text font-custom">With Webcore, you can develop stylish and cutting-edge websites for your Spigot server. Whether you use a front-end templete or just the API, you can be sure your site stands out among the rest.</p>
+                  </div>
+                  <div class="card-actions">
+                    <a class="btn btn-outline-info font-custom-bold" href="./webcore"><i class="material-icons mr-3">web</i> Learn More</a>
+                  </div>
                 </div>
+                <div class="spacer-md-lg"></div>
+              </div>
+              <div class="col-12 col-md-4">
+                <div class="card m-auto ch-100" style="max-width: 20rem;">
+                  <img alt="Lobbycore" class="card-img-top" src="resources/img/lct.png">
+                  <div class="card-body">
+                    <h4 class="card-title font-custom-bold">Lobbycore</h4>
+                    <p class="card-text font-custom">With Lobbycore, you can build stunning lobbies and hubs with great features. Forget having to deal with complex UIs or painfully page through WorldGuard settings, just build a hub and relax.</p>
+                  </div>
+                  <div class="card-actions">
+                    <a class="btn btn-outline-info font-custom-bold" href="./lobbycore"><i class="material-icons mr-3">storefront</i> Learn More</a>
+                  </div>
+                </div>
+                <div class="spacer-md-lg"></div>
               </div>
             </div>
-            <div class="col-12 col-md-4">
-              <div class="card m-auto ch-100" style="max-width: 20rem;">
-                <img alt="Webcore" class="card-img-top" src="resources/img/wct.png">
-                <div class="card-body">
-                  <h4 class="card-title font-custom-bold">Webcore</h4>
-                  <p class="card-text font-custom">With Webcore, you can develop stylish and cutting-edge websites for your Spigot server. Whether you use a front-end templete or just the API, you can be sure your site stands out among the rest.</p>
-                </div>
-                <div class="card-actions">
-                  <a class="btn btn-outline-info font-custom-bold" href="./webcore"><i class="material-icons mr-3">web</i> Learn More</a>
-                </div>
-              </div>
+            <div class="spacer-md"></div>
+            <p class="font-custom text-center">The Core family is in development, and is going to stay that way for a while. Admincore is the only plugin with binaries currently.</p>
+            <hr class="my-4">
+            <h1 class="display-4 text-center font-custom-bold">Endcraft</h1>
+            <p class="text-center font-custom">EndCraft is a Minecraft server I've owned with some friends since 2013. I've been working on and off developing and running the server over that time, which really doesn't yeild results. So, I decided to create this repository; a place to leave public files and archives of EndCraft to help people with more drive than me develop other servers. EndCraft was originally developed for MC:PE in 2013 using a mix of vanilla and PMMP throughought its first few years. The server moved to being vanilla-based in 2017, coming back to PMMP in 2019. EndCraft also was ported to Java in 2019 using Paper. In early August 2020 I shut down Java for the last time as of writing and left the team maintaining MC:BE. A name change and few months later MC:BE EndCraft, known as Helios Practice, <a href="https://eerie.ml/projects/index.html#helios" class="text-info font-custom-bold">closed on Febuary 1st, 2021.</a></p>
+            <div class="text-center">
+              <a href="./osea" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">widgets</i> Archive</a>
             </div>
-            <div class="col-12 col-md-4">
-              <div class="card m-auto ch-100" style="max-width: 20rem;">
-                <img alt="Lobbycore" class="card-img-top" src="resources/img/lct.png">
-                <div class="card-body">
-                  <h4 class="card-title font-custom-bold">Lobbycore</h4>
-                  <p class="card-text font-custom">With Lobbycore, you can build stunning lobbies and hubs with great features. Forget having to deal with complex UIs or painfully page through WorldGuard settings, just build a hub and relax.</p>
+            <hr class="my-4">
+            <h1 class="display-4 text-center font-custom-bold">To The Moon Theory Wiki</h1>
+            <p class="text-center font-custom">The To The Moon Theory Wiki is a project I originally conceptualized in late 2020, with the release being in early 2021. Being the main active theorizer of all Freebird games, I noticed theories were hard to keep track of and I would usually lose ones made by others. As a response, I decided to build a place for theories to exist and be easily accessable to anyone who might want to read some or use them to make their own. The wiki is a fan-made and moderated site that is not officially affiliated with Freebird Games.</p>
+            <div class="text-center">
+              <a href="./ttm" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">library_books</i> Wiki</a>
+            </div>
+            <hr class="my-4">
+            <h1 class="display-4 text-center font-custom-bold">Custom Query Stats</h1>
+            <p class="text-center font-custom">Custom Query Stats is a plugin that stores player statistics in your server's MOTD. These stats are hidden from players but visible to query scripts. In many ways, Custom Query Stats is the precursor to Webcore, and includes some of Webcore's features. Unlike Webcore, however, Custom Query Stats uses the server MOTD to transfer data rather than HTTP. Custom Query Stats is limited in both version (1.16.x) and information (2MB worth of player statistics), so I'd recommend using Webcore's API for better results. If you run a small server and need a lightweight, simple data transfer plugin however, I'd recommend Custom Query Stats.</p>
+            <div class="text-center">
+              <a href="./cqs" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">analytics</i> Custom Query Stats</a>
+            </div>
+            <hr class="my-4">
+            <h1 class="display-4 text-center font-custom-bold" id="contact">Contact</h1>
+            <p class="text-center font-custom">Looking to get in touch? To contact me, you can either send me an email, visit one of my socials, or join my Discord server.</p>
+            <div class="row">
+              <div class="col-12 col-md-4">
+                <div class="text-center">
+                  <a href="mailto:me@rudrecciah.dev" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">email</i> Email</a>
                 </div>
-                <div class="card-actions">
-                  <a class="btn btn-outline-info font-custom-bold" href="./lobbycore"><i class="material-icons mr-3">storefront</i> Learn More</a>
+                <div class="spacer-md-lg"></div>
+              </div>
+              <div class="col-12 col-md-4">
+                <div class="text-center">
+                  <a tabindex="0" class="btn btn-info font-custom-bold" role="button" data-toggle="popover" data-trigger="focus" title="<span class='font-custom-bold text-center'>Social Media Accounts</span>" data-html="true" data-placement="top" data-content="<table class='table text-center'><tbody><tr><td><a href='https://github.com/rudrecciah' class='font-custom text-info'>Github</a></td></tr><tr><td><a href='https://steamcommunity.com/id/rudrecciah' class='font-custom text-info'>Steam</a></td></tr><tr><td><a href='https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q' class='font-custom text-info'>Youtube</a></td></tr><tr><td><a href='https://twitch.tv/rudrecciah' class='font-custom text-info'>Twitch</a></td></tr><tr><td><a href='https://twitter.com/rrecciah' class='font-custom text-info'>Twitter</a></td></tr></tbody></table>"><i class="material-icons mr-3">share</i> Socials</a>
                 </div>
+                <div class="spacer-md-lg"></div>
               </div>
-            </div>
-          </div>
-          <div class="spacer-md"></div>
-          <p class="font-custom text-center">The Core family is in development, and is going to stay that way for a while. Admincore is the only plugin with binaries currently.</p>
-          <hr class="my-4">
-          <h1 class="display-4 text-center font-custom-bold">Endcraft</h1>
-          <p class="text-center font-custom">EndCraft is a Minecraft server I've owned with some friends since 2013. I've been working on and off developing and running the server over that time, which really doesn't yeild results. So, I decided to create this repository; a place to leave public files and archives of EndCraft to help people with more drive than me develop other servers. EndCraft was originally developed for MC:PE in 2013 using a mix of vanilla and PMMP throughought its first few years. The server moved to being vanilla-based in 2017, coming back to PMMP in 2019. EndCraft also was ported to Java in 2019 using Paper. In early August 2020 I shut down Java for the last time as of writing and left the team maintaining MC:BE. A name change and few months later MC:BE EndCraft, known as Helios Practice, <a href="https://eerie.ml/projects/index.html#helios" class="text-info font-custom-bold">closed on Febuary 1st, 2021.</a></p>
-          <div class="text-center">
-            <a href="./osea" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">widgets</i> Archive</a>
-          </div>
-          <hr class="my-4">
-          <h1 class="display-4 text-center font-custom-bold">To The Moon Theory Wiki</h1>
-          <p class="text-center font-custom">The To The Moon Theory Wiki is a project I originally conceptualized in late 2020, with the release being in early 2021. Being the main active theorizer of all Freebird games, I noticed theories were hard to keep track of and I would usually lose ones made by others. As a response, I decided to build a place for theories to exist and be easily accessable to anyone who might want to read some or use them to make their own. The wiki is a fan-made and moderated site that is not officially affiliated with Freebird Games.</p>
-          <div class="text-center">
-            <a href="./ttm" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">library_books</i> Wiki</a>
-          </div>
-          <hr class="my-4">
-          <h1 class="display-4 text-center font-custom-bold">Custom Query Stats</h1>
-          <p class="text-center font-custom">Custom Query Stats is a plugin that stores player statistics in your server's MOTD. These stats are hidden from players but visible to query scripts. In many ways, Custom Query Stats is the precursor to Webcore, and includes some of Webcore's features. Unlike Webcore, however, Custom Query Stats uses the server MOTD to transfer data rather than HTTP. Custom Query Stats is limited in both version (1.16.x) and information (2MB worth of player statistics), so I'd recommend using Webcore's API for better results. If you run a small server and need a lightweight, simple data transfer plugin however, I'd recommend Custom Query Stats.</p>
-          <div class="text-center">
-            <a href="./cqs" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">analytics</i> Custom Query Stats</a>
-          </div>
-          <hr class="my-4">
-          <h1 class="display-4 text-center font-custom-bold" id="contact">Contact</h1>
-          <p class="text-center font-custom">Looking to get in touch? To contact me, you can either send me an email, visit one of my socials, or join my Discord server.</p>
-          <div class="row">
-            <div class="col-12 col-md-4">
-              <div class="text-center">
-                <a href="mailto:me@rudrecciah.dev" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">email</i> Email</a>
-              </div>
-              <div class="spacer-md-lg"></div>
-            </div>
-            <div class="col-12 col-md-4">
-              <div class="text-center">
-                <a tabindex="0" class="btn btn-info font-custom-bold" role="button" data-toggle="popover" data-trigger="focus" title="<span class='font-custom-bold text-center'>Social Media Accounts</span>" data-html="true" data-placement="top" data-content="<table class='table text-center'><tbody><tr><td><a href='https://github.com/rudrecciah' class='font-custom text-info'>Github</a></td></tr><tr><td><a href='https://steamcommunity.com/id/rudrecciah' class='font-custom text-info'>Steam</a></td></tr><tr><td><a href='https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q' class='font-custom text-info'>Youtube</a></td></tr><tr><td><a href='https://twitch.tv/rudrecciah' class='font-custom text-info'>Twitch</a></td></tr><tr><td><a href='https://twitter.com/rrecciah' class='font-custom text-info'>Twitter</a></td></tr></tbody></table>"><i class="material-icons mr-3">share</i> Socials</a>
-              </div>
-              <div class="spacer-md-lg"></div>
-            </div>
-            <div class="col-12 col-md-4">
-              <div class="text-center">
-                <a href="https://discord.rudrecciah.dev/" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">podcasts</i> Discord</a>
+              <div class="col-12 col-md-4">
+                <div class="text-center">
+                  <a href="https://discord.rudrecciah.dev/" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">podcasts</i> Discord</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="col-lg-2"></div>
       </div>
-      <div class="col-lg-2"></div>
     </div>
+    <div class="spacer-lg d-none d-lg-block"></div>
   </div>
-  <div class="spacer-lg d-none d-lg-block"></div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="resources/js/material.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.1/js/OverlayScrollbars.min.js" integrity="sha512-B1xv1CqZlvaOobTbSiJWbRO2iM0iii3wQ/LWnXWJJxKfvIRRJa910sVmyZeOrvI854sLDsFCuFHh4urASj+qgw==" crossorigin="anonymous"></script>
-  <script>
-    $('[data-toggle="tooltip"]').tooltip()
-    document.addEventListener("DOMContentLoaded", function() {
-      OverlayScrollbars(document.querySelectorAll("body"), {scrollbars: {autoHide: "move"}});
-    });
-    $(function () {
-      $('[data-toggle="popover"]').popover()
-    })
-  </script>
+  <script src="./resources/js/main.js"></script>
+<script>
+  track()
+</script>
 </body>
 </html>
