--- a/about/index.html
+++ b/about/index.html
@@ -1,10 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <title>RudRecciah - About</title>
+  <meta charset="utf-8">
+  <meta content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport">
+  <meta name="author" content="RudRecciah">
+  <meta name="description" content="I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, and Python. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic GAMER spending his days playing competitive Minecraft and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the plugin family Core.">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="../resources/css/material.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.1/css/OverlayScrollbars.min.css" integrity="sha512-jN4O0AUkRmE6Jwc8la2I5iBmS+tCDcfUd1eq8nrZIBnDKTmCp5YxxNN1/aetnAH32qT+dDbk1aGhhoaw5cJNlw==" crossorigin="anonymous" />
+  <link href="../resources/css/style.css" rel="stylesheet">
+  <link rel="icon" href="../favicon.png">
 </head>
-<body>
-
+<body class="ch-100">
+<nav class="navbar navbar-dark bg-info shadow-4 z-index-20">
+  <a class="navbar-brand m-0" href="../">
+    <img src="../resources/img/parrot.png" width="36" height="36" alt="Party Parrot">
+    <span class="d-none d-lg-inline">
+        <span class="font-custom-bold cml-15">&#60;/RudRecciah&#62;</span>
+      </span>
+  </a>
+  <ul class="navbar-nav d-lg-none align-self-center">
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../"><span class="font-custom-bold">&#60;/RudRecciah&#62;</span></a>
+    </li>
+  </ul>
+  <div class="d-lg-none">
+    <button aria-controls="sidebar" aria-expanded="false" aria-label="Toggle Navdrawer" class="navbar-toggler" data-target="#sidebar" data-toggle="navdrawer"><span class="navbar-toggler-icon"></span></button>
+  </div>
+  <ul class="navbar-nav d-none d-lg-flex">
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="./" data-toggle="tooltip" data-placement="bottom" title="About"><i class="material-icons">person</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../contact/" data-toggle="tooltip" data-placement="bottom" title="Contact"><i class="material-icons">email</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../admincore/" data-toggle="tooltip" data-placement="bottom" title="Admincore"><i class="material-icons">admin_panel_settings</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../webcore/" data-toggle="tooltip" data-placement="bottom" title="Webcore"><i class="material-icons">web</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../lobbycore/" data-toggle="tooltip" data-placement="bottom" title="Lobbycore"><i class="material-icons">storefront</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../osea/" data-toggle="tooltip" data-placement="bottom" title="Endcraft"><i class="material-icons">widgets</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../ttm/" data-toggle="tooltip" data-placement="bottom" title="TTM Theory Wiki"><i class="material-icons">library_books</i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active font-custom-bold" href="../cqs/" data-toggle="tooltip" data-placement="bottom" title="CQS"><i class="material-icons">analytics</i></a>
+    </li>
+  </ul>
+</nav>
+<div aria-hidden="true" class="navdrawer" id="sidebar" tabindex="-1">
+  <div class="navdrawer-content">
+    <div class="navdrawer-subheader">
+      Information
+    </div>
+    <ul class="navdrawer-nav">
+      <li class="nav-item">
+        <a class="nav-link active text-info" href="../"><i class="material-icons mr-3">home</i> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="./"><i class="material-icons mr-3">person</i> About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../contact"><i class="material-icons mr-3">email</i> Contact</a>
+      </li>
+    </ul>
+    <div class="navdrawer-subheader">
+      Core
+    </div>
+    <ul class="navdrawer-nav">
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../admincore"><i class="material-icons mr-3">admin_panel_settings</i> Admincore</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../webcore"><i class="material-icons mr-3">web</i> Webcore</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../lobbycore"><i class="material-icons mr-3">storefront</i> Lobbycore</a>
+      </li>
+    </ul>
+    <div class="navdrawer-subheader">
+      Miscellaneous
+    </div>
+    <ul class="navdrawer-nav">
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../osea"><i class="material-icons mr-3">widgets</i> Endcraft</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../ttm"><i class="material-icons mr-3">library_books</i> TTM Theory Wiki</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black" href="../cqs"><i class="material-icons mr-3">analytics</i> CQS</a>
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="spacer-lg d-none d-lg-block"></div>
+<div class="container-fluid h-fluid">
+  <div class="row align-items-center">
+    <div class="col-lg-2"></div>
+    <div class="col-12 col-lg-8">
+      <div class="jumbotron shadow-none shadow-lg-4">
+        <h1 class="display-4 text-center font-custom-bold">About</h1>
+        <p class="text-center font-custom">I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, and Python. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic <span class="font-custom-bold">GAMER</span> spending his days playing competitive Minecraft, coding, and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the indev plugin family Core. Other than that, I'm <span id="age">cool</span> and outside of development and Minecraft I enjoy mountain biking and, during the colder months, snowboarding. I'm somewhat active on my socials, but half of the time its just shitposting and nothing really useful. I love <a href="https://freebirdgames.com/" class="text-info font-custom-bold">Freebird Games</a> and their <a href="https://freebirdgames.com/to_the_moon/" class="text-info font-custom-bold">To The Moon</a> series. I spend a lot of time in that community so if you're from there and stopping by hello! I've also worked on and hosted <a href="https://eerie.ml/" class="text-info font-custom-bold">EerieDEV</a>'s PMMP practice server <a href="https://eerie.ml/projects#helios" class="text-info font-custom-bold">Helios Practice</a>, so if you're from there hello again! My contact information and projects are all listed on their respective pages.</p>
+      </div>
+    </div>
+    <div class="col-lg-2"></div>
+  </div>
+</div>
+<div class="spacer-lg d-none d-lg-block"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="../resources/js/material.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.js"></script>
+<script src="../resources/js/main.js"></script>
+<script>
+  age();
+</script>
 </body>
 </html>
