changed a few things

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport">
   <meta name="author" content="RudRecciah">
   <meta name="keywords" content="rudrecciah, endcraft, freebird games, rud recciah, rud, recciah, developer, to the moon wiki, to the moon, finding paradise, theory, theory wiki, to the moon theory wiki, ttm theory wiki, ttm wiki, freebird arena, custom query stats, spigotmc, spigot, killed kan gao in among us, admin core, admin-core, admincore, web core, web-core, webcore, lobby core, lobby-core, lobbycore, plugin">
-  <meta name="description" content="I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, and Python. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic GAMER spending his days playing competitive Minecraft and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the plugin family Core.">
+  <meta name="description" content="I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, Python, and Svelte.">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="resources/css/material.min.css" rel="stylesheet">
@@ -111,7 +111,7 @@
         <div class="col-12 col-lg-8">
           <div class="jumbotron shadow-none shadow-lg-4">
             <h1 class="display-4 text-center font-custom-bold">Hey</h1>
-            <p class="text-center font-custom">I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, and Python. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic <span class="font-custom-bold">GAMER</span> spending his days playing competitive Minecraft, coding, and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the indev plugin family Core.</p>
+            <p class="text-center font-custom">I'm a pink parrot with development skills. I code in Java, HTML, JS, CSS, Python, and Svelte. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic <span class="font-custom-bold">GAMER</span> spending his days playing competitive Minecraft, coding, and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the indev plugin family Core.</p>
             <div class="text-center">
               <a href="./about" class="btn btn-info font-custom-bold"><i class="material-icons mr-3">person</i> About</a>
             </div>
