--- a/public/index.html
+++ b/public/index.html
@@ -4,41 +4,28 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#7D4CDB" />
+    <meta name="description" content="I'm a pink parrot with development skills."/>
+    <meta name="keywords" content="rudrecciah, endcraft, freebird games, rud recciah, rud, recciah, developer, to the moon wiki, to the moon, finding paradise, theory, theory wiki, to the moon theory wiki, ttm theory wiki, ttm wiki, freebird arena, custom query stats, spigotmc, spigot, killed kan gao in among us, admin core, admin-core, admincore, web core, web-core, webcore, lobby core, lobby-core, lobbycore, plugin"/>
+    <meta name="robots" content="index, follow"/>
+    <meta name="language" content="English"/>
+    <meta name="revisit-after" content="1 days"/>
+    <meta name="author" content="RudRecciah"/>
+    <meta name="creator" content="RudRecciah"/>
+    <meta name=publisher" content="RudRecciah"/>
+    <meta property="og:title" content="RudRecciah"/>
+    <meta property="og:description" content="I'm a pink parrot with development skills."/>
+    <meta property="og:image" content="%PUBLIC_URL%/banner.png"/>
+    <meta property="og:url" content="https://rudrecciah.dev/"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta property="og:site_name" content="RudRecciah"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>RudRecciah</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
