--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="revisit-after" content="1 days"/>
     <meta name="author" content="RudRecciah"/>
     <meta name="creator" content="RudRecciah"/>
-    <meta name=publisher" content="RudRecciah"/>
+    <meta name="publisher" content="RudRecciah"/>
     <meta property="og:title" content="RudRecciah"/>
     <meta property="og:description" content="I'm a pink parrot with development skills."/>
     <meta property="og:image" content="%PUBLIC_URL%/banner.png"/>
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta property="og:site_name" content="RudRecciah"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>RudRecciah</title>
   </head>
