--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#7D4CDB" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#7D4CDB"/>
     <meta name="description" content="I'm a pink parrot with development skills."/>
     <meta name="keywords" content="rudrecciah, endcraft, freebird games, rud recciah, rud, recciah, developer, to the moon wiki, to the moon, finding paradise, theory, theory wiki, to the moon theory wiki, ttm theory wiki, ttm wiki, freebird arena, custom query stats, spigotmc, spigot, killed kan gao in among us, admin core, admin-core, admincore, web core, web-core, webcore, lobby core, lobby-core, lobbycore, plugin"/>
     <meta name="robots" content="index, follow"/>
@@ -19,9 +19,9 @@
     <meta property="og:url" content="https://rudrecciah.dev/"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta property="og:site_name" content="RudRecciah"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>RudRecciah</title>
   </head>
   <body>
