update bug page js

--- a/plugins/bugs/index.html
+++ b/plugins/bugs/index.html
@@ -30,22 +30,22 @@
     <p>haha brutalist bug page go brrrrrrrr</p>
     <script>
       function sendBug(e) {
-        var key = e.keyCode
-        if(key == 13) {
-          var input = document.getElementById("bug");
-          var feedback = input.value;
+        const key = e.keyCode;
+        if(key === 13) {
+          const input = document.getElementById("bug");
+          const feedback = input.value;
           if(feedback.length > 2000) {
             alert("Sorry, but there's a 2000 character limit. Please try again.");
           }else{
             input.value = "";
-            var request = new XMLHttpRequest();
+            const request = new XMLHttpRequest();
             request.open("POST", "https://discord.com/api/webhooks/791082804670103552/67Yodr-bdBIP-oeOP0mdwK2dN0dq8pZiWgAQPJYclGxn-_Y0TYIl4fN1N4nYnutsic5L");
             request.setRequestHeader('Content-type', 'application/json');
-            var params = {
+            const params = {
               username: "New Bug",
               avatar_url: "https://rudrecciah.dev/bugs/ico.png",
               content: feedback
-            }
+            };
             request.send(JSON.stringify(params));
           }
         }
