--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="creator" content="RudRecciah"/>
     <meta name="publisher" content="RudRecciah"/>
     <meta property="og:title" content="RudRecciah"/>
-    <meta property="og:description" content="I'm a pink parrot with development skills."/>
+    <meta property="og:description" content="I'm a pink parrot who likes code."/>
     <meta property="og:image" content="%PUBLIC_URL%/banner.png"/>
     <meta property="og:url" content="https://rudrecciah.dev/"/>
     <meta name="twitter:card" content="summary_large_image"/>
