edited discord plugin

--- a/plugins/discord/index.html
+++ b/plugins/discord/index.html
@@ -5,7 +5,7 @@
     Redirecting...
   </title>
   <script>
-    window.location.href = "https://discord.gg/ju9ft9vrre";
+    window.location.href = "https://discord.gg/JU9fT9vRrE";
   </script>
 </head>
 </html>
